force-app/main/default/objects/Training_Events__c/fields/Course_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Order_Status__c</fullName>
    <description>Checks the Status of the Order before setting the TE Status</description>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule</fullName>
                <default>true</default>
                <label>Schedule</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>