force-app/main/default/objects/Training_Events__c/fields/Scheduling_Status__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Status__c</fullName>
    <label>Scheduling Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Order_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contacting</fullName>
                <default>true</default>
                <label>Contacting</label>
            </value>
            <value>
                <fullName>In Discussion - Customer Hold</fullName>
            </value>
            <value>
                <fullName>In Discussion - Scheduling</fullName>
            </value>
            <value>
                <fullName>Sent Addendum</fullName>
            </value>
            <value>
                <fullName>In-Discussion</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rescheduling</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Course Record Processed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>