force-app/main/default/objects/Training_Events__c/validationRules/No_characters_for_Supp_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>No_characters_for_Supp_Info</fullName>
    <active>true</active>
    <description>No Special Characters allowed in the Supp Info field.</description>
    <errorConditionFormula>AND(
( NOT( ISBLANK(Supp_Info__c))),
(NOT(REGEX( Supp_Info__c, &quot;[a-zA-Z0-9]+&quot;)))
)</errorConditionFormula>
    <errorDisplayField>Supp_Info__c</errorDisplayField>
    <errorMessage>No Special Characters allowed in the Supp Info Field. (ie #, &amp;, $)</errorMessage>
</ValidationRule>